# ros2_summer_school

guiji/: CMakeLists.txt  package.xml
guiji/config/: config.rviz
guiji/launch/: auto_control.launch.xml  guiji_test.xml
guiji/urdf/: guiji.urdf
guiji_control/: package.xml  setup.cfg  setup.py
guiji_control/guiji_control/: trajectory_generator.py  trajectory_planner.py
guiji_gazebo/: CMakeLists.txt  package.xml
guiji_gazebo/config/: gz_bridge.yaml
guiji_gazebo/launch/: guiji_gazebo.launch.py
guiji_gazebo/worlds/: guiji_world.sdf
guiji_moveit_config/: CMakeLists.txt  package.xml
guiji_moveit_config/config/: guiji.srdf  joint_limits.yaml  moveit_controllers.yaml  pilz_cartesian_limits.yaml
guiji_moveit_config/launch/: demo.launch.py
