<?xml version="1.0"?>
<package format="3">
  <name>guiji_moveit_config</name>
  <version>0.3.0</version>
  <description>Handcrafted MoveIt config for guiji arm</description>
  <license>Apache-2.0</license>
  <author email="student@ntust.edu.tw">Guiji Developer</author>
  <maintainer email="student@ntust.edu.tw">Guiji Developer</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
